[gd_scene load_steps=7 format=2]

[ext_resource path="res://Dash/Dash.gd" type="Script" id=1]
[ext_resource path="res://Dash/dust-cloud.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.557416 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_random = 1.0
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
spread = 31.21
gravity = Vector3( 0, 0, 0 )
initial_velocity = 34.06
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_random = 1.0
color_ramp = SubResource( 2 )

[node name="Dash" type="Node2D"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="InstanceTimer" type="Timer" parent="."]

[node name="DustParticles" type="Particles2D" parent="."]
z_index = -1
emitting = false
amount = 6
one_shot = true
explosiveness = 0.84
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="DustBurstParticles" type="Particles2D" parent="."]
z_index = -1
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="InstanceTimer" to="." method="_on_InstanceTimer_timeout"]
